# Travel

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TASK_BRIEF.md  backup.sql  countries_descriptions.json  docker-compose.yml  pyproject.toml  travel_companion_full.sql  travel_dump.sql
alembic/versions/: 25fb8e95df8c_initial.py  52d8b3e8ff63_add_ai_fields_to_trip_poi.py  74b6e9839d4e_add_day_number_to_trip_poi.py
app/: config.py  dependencies.py  main.py
app/api/: auth.py  chat.py  poi.py  rule.py  trip.py
app/core/: database.py  exceptions.py  maps.py
app/models/: __init__.py  geography.py  poi.py  rule.py  trip.py  user.py
app/repositories/: base.py  geography.py  poi.py  rule.py  trip.py  user.py
app/schemas/: auth.py  geography.py  poi.py  rule.py  trip.py
app/services/: ai.py  chat_agent.py  poi.py  rule.py  trip.py  trip_ai.py
backend/: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 00292c896f5f_add_last_enriched_at_to_cities.py  251c9801b3a4_merge_conflict.py  3f8a9cb929e7_add_index_idx_trip_pois_trip_day_on_.py  (+9 more)
backend/app/: __init__.py  config.py  dependencies.py  logging_config.py  main.py
backend/scripts/: migrate_to_server.sh  seed_all_countries.py  seed_kaliningrad.py  seed_karelia.py  seed_top9_countries.py
backend/tests/: conftest.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
scripts/: seed.py  seed_pois.py
tests/repositories/: test_trip.py  test_user.py
tests/services/: test_trip.py
(+80 files in other folders)
